# ROS2_RM_Navigation

./: .gitignore  LICENSE  README.md
TF/: frames_2026-03-15_12.21.08.gv  frames_2026-03-15_13.11.45.gv  frames_2026-03-15_13.18.35.gv  frames_2026-03-15_13.21.09.gv  frames_2026-03-15_13.50.18.gv  lio.gv  localization.gv  navigation.gv
sh/: build_all.sh  build_serial.sh  echo_pose.sh  echo_tf_odom.sh  real_nav.sh  real_slam.sh  rqt_reconfigure.sh  serial_bringup.sh  serial_pub.sh  sim_nav.sh  sim_slam.sh
src/driver/livox_ros_driver2/src/src/: lddc.cpp
src/driver/rm_serial_driver/: CMakeLists.txt  README.md  package.xml
src/driver/rm_serial_driver/include/: uart.hpp
src/driver/rm_serial_driver/launch/: rm_serial_driver.launch.py
src/driver/rm_serial_driver/params/: params.yaml
src/driver/rm_serial_driver/src/: rm_serial_driver.cpp  test_cmd_vel_pub.py
src/gazebo/pb_rm_simulation/launch/: rm_simulation.launch.py
src/gazebo/pb_rm_simulation/world/obstacles/: CMakeLists.txt  README.md
src/gazebo/pb_rm_simulation/world/obstacles/src/: obstacle1.cc  obstacle2.cc
src/gazebo/pb_rm_simulation/world/obstacles/worlds/: obstacle1.world
src/localization/point_lio/rviz_cfg/: loam_livox.rviz
src/navigation/rm_navigation/params/: nav2_params.yaml
src/navigation/rm_navigation/rviz/: nav2.rviz
src/processing/fake_vel_transform/: package.xml
src/processing/fake_vel_transform/src/: fake_vel_transform.cpp  fake_vel_transform1.cpp
src/rm_nav_bringup/: 9个参数文件调参.md  README.md
src/rm_nav_bringup/PCD/: RMUL2026H.pcd
src/rm_nav_bringup/config/reality/: MID360_config.json  fastlio_mid360_real.yaml  nav2_params_real.yaml
src/rm_nav_bringup/config/simulation/: nav2_params_sim.yaml
src/rm_nav_bringup/config_Neupan/reality/: mapper_params_localization_real.yaml  pointlio_mid360_real.yaml
src/rm_nav_bringup/config_Neupan/simulation/: mapper_params_localization_sim.yaml
src/rm_nav_bringup/config_TEB/reality/: measurement_params_real.yaml  segmentation_real.yaml
src/rm_nav_bringup/launch/: bringup_sim.launch.py  gazebo.launch.py  lio.launch.py  localization.launch.py  navigation.launch.py  processing.launch.py
src/rm_nav_bringup/map/: RMUL2026H.data  RMUL2026H.pgm  RMUL2026H.yaml
src/rm_nav_bringup/map/old/: RMUL2026H.data  RMUL2026H.pgm  RMUL2026H.yaml
src/rm_nav_bringup/urdf/: sentry_robot_sim.urdf
(+19 files in other folders)
